<resources>

    <string name="app_name">AndroidHomeWork</string>
    <string name="licence_agreement">Cогласен с условиями соглашения.</string>
    <string name="login_button_text">login</string>
    <string name="main_text_view">Вход в систему</string>
    <string name="hint_login">E-mail</string>
    <string name="hint_password">Пароль</string>
    <string name="success_login">Вход выполнен успешно</string>
    <string name="agreement_needed">Для продолжения необходимо отметить согласие с условиями</string>
    <string name="big_text">Лицензио́нный договор — средство «распоряжения исключительным правом»; гражданско-правовой договор, по которому «одна сторона — обладатель исключительного права на результат интеллектуальной деятельности или на средство индивидуализации (лицензиар) — предоставляет или обязуется предоставить другой стороне (лицензиату) право использования такого результата или средства в предусмотренных образцом лицензионного договора пределах.».[2] Следовательно, в лицензионном договоре могут предоставляться авторские, патентные, смежные, а также другие права.</string>
    <string name="action_2">Filter</string>

    <string name="screen_1">Лицензио́нный договор — средство «распоряжения исключительным правом»; гражданско-правовой договор, по которому «одна сторона — обладатель исключительного права на результат интеллектуальной деятельности или на средство индивидуализации (лицензиар) — предоставляет или обязуется предоставить другой стороне (лицензиату) право использования такого результата или средства в предусмотренных образцом лицензионного договора пределах.».[2] Следовательно, в лицензионном договоре могут предоставляться авторские, патентные, смежные, а также другие права.</string>


    <string name="screen_2">Научная статья — законченное авторское произведение, описывающее результаты оригинального научного исследования (первичная научная статья) или посвящённая рассмотрению ранее опубликованных научных статей, связанных общей темой (обзорная научная статья). В первичных научных статьях авторами излагается существенная информация о проведённом исследовании в форме, позволяющей другим членам научного сообщества оценить исследование, воспроизвести эксперименты, а также оценить рассуждения и сделанные из них выводы. Обзорные научные статьи предназначены для обобщения, анализа, оценки, суммирования или синтеза ранее опубликованной информации (первичных научных публикаций). Нередко научная статья сочетает в себе эти два типа научных текстов, включая обзорную и оригинальную части.</string>
    <string name="screen_3">Амуа́р — коммуна в Валлонии, расположенная в провинции Льеж, округ Юи. Принадлежит Французскому языковому сообществу Бельгии. На площади 27,80 км² проживают 3592 человека (плотность населения — 129 чел./км²), из которых 48,39 % — мужчины и 51,61 % — женщины. Средний годовой доход на душу населения в 2003 году составлял 11 427 евро.</string>
    <string name="screen_4">Градие́нт (от лат. gradiens, род. п. gradientis «шагающий, растущий») — вектор, своим направлением указывающий направление наибольшего возрастания некоторой величины, значение которой меняется от одной точки пространства к другой (скалярного поля), а по величине (модулю) равный скорости роста этой величины в этом направлении.</string>

    <string name="title_1">Лицензионный Договор</string>
    <string name="title_2">Научная статья</string>
    <string name="title_3">Амуар</string>
    <string name="title_4">Градиент</string>
    <string name="dialog_btn_cancel">Отмена</string>
    <string name="dialog_btn_add">Добавить</string>
    <string name="dialog_animal_name">Имя животного</string>
    <string name="dialog_animal_family">Семейство животного</string>
    <string name="dialog_animal_rarity">Редкость животного</string>
    <string name="dialog_chackBox_text">Редкое животное</string>
    <string name="permission_needed">Для отображения списка локаций необходимо разрешение</string>
    <string name="permission_button">Разрешить</string>
    <string name="button_get_location">Получить геопозицию</string>
    <string name="empty_location_list">Список Пуст</string>
    <string name="unsync_count">Unsync </string>
    <string name="sync_count">sync </string>
    <string name="movies_list">Movies List</string>
    <string name="race_condition">Race Condition</string>
    <string name="dead_lock">Dead Lock</string>
    <string name="film_name">Название фильма</string>
    <string name="film_year">Год фильма</string>
    <string name="download_button">Загрузить</string>
    <string name="try_again">try again</string>
    <string name="loading_error">loading error</string>

    <string name="shop">shop</string>
    <string name="cart">cart</string>
    <string name="profile">profile</string>
    <string name="favorites">favorites</string>



    <string-array name="film_types">
        <item>movie</item>
        <item>series</item>
        <item>game</item>
        <item>not selected</item>
    </string-array>

    <string name="main_profile">Профиль</string>
    <string name="main_repositories">Список репозиториев</string>
    <string name="auth_login">Get Token</string>
    <string name="auth_canceled">Аутентификация не выполнена</string>


</resources>

