<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newAnimalDialog"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:id="@+id/animalNameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_animal_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/animalFamilyEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_animal_family"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animalNameEditText" />

    <EditText
        android:id="@+id/animalRarityEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_animal_rarity"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animalFamilyEditText" />

    <CheckBox
        android:id="@+id/isRare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_chackBox_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animalRarityEditText" />

    <Button
        android:id="@+id/cancelDailog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/dialog_btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/addAnimal"
        app:layout_constraintTop_toBottomOf="@id/isRare" />

    <Button
        android:id="@+id/addAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_btn_add"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isRare" />


</androidx.constraintlayout.widget.ConstraintLayout>