<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5FFCF"
    tools:context="com.example.androidhomework.MainActivity">


    <LinearLayout
        android:id="@+id/parentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewHead"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="15dp"
            android:text="@string/main_text_view"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/hint_login"

            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pasEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/hint_password"

            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/agreementCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="30dp"
            android:onClick="onAgreement"

            android:text="@string/licence_agreement" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:onClick="onLogin"
            android:text="@string/login_button_text" />


    </LinearLayout>
</ScrollView>

